Little bit of changes

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <div class="form-welcome">
                     <button name="submit" data-name="Получить консультацию" data-section="Вводный блок" id="button-welcome" class="submit button">Получить консультацию</button>
                     <a href="https://goo.gl/forms/sROckm2cdeWQ1jWh2" target="_blank">
-                        <button name="submit" id="button-brief" class="button">Получить бесплатный аудит</button>
+                        <button name="submit" id="button-brief" class="button">Аудит онлайн</button>
                     </a>
                 </div>
             </div>
